--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -1,5 +1,1 @@
-<form action="" method='post'>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit">
-</form>
+<!-- главная страница -->
