--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -1,1 +1,7 @@
 <!-- главная страница -->
+
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit">
+</form>
