Шаблоны и статичные файлы"

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,15 +1,16 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/registry.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="{% static accounts/css/reset.css %}">
+    <link rel="stylesheet" href="{% static accounts/css/fonts.css %}">
+    <link rel="stylesheet" href="{% static accounts/css/header.css %}">
+    <link rel="stylesheet" href="{% static accounts/css/registry.css %}">
+    <link rel="stylesheet" href="{% static accounts/css/main.css %}">
+    <link rel="stylesheet" href="{% satic accounts/css/footer.css %}">
 
     <title>Hack2024</title>
 </head>
@@ -21,15 +22,15 @@
                 <form class="header__search">
                     <input type="text" required placeholder="Поиск">
                     <button>
-                        <img src="assets/images/ui/search.svg" alt="Искать">
+                        <img src="accounts/images/ui/search.svg" alt="Искать">
                     </button>
                 </form>
                 <div class="header__nav">
                     <a href="/registry.html" class="nav__account">
-                        <img src="assets/images/ui/user.svg" alt="Аккаунт">
+                        <img src="accounts/images/ui/user.svg" alt="Аккаунт">
                     </a>
                     <a href="#" class="nav__vk">
-                        <img src="assets/images/ui/vk.svg" alt="VK">
+                        <img src="accounts/images/ui/vk.svg" alt="VK">
                     </a>
                 </div>
             </div>
@@ -79,6 +80,6 @@
         </div>
     </div>
 
-    <script src="assets/js/registry.js"></script>
+    <script src="accounts/js/registry.js"></script>
 </body>
 </html>
