--- a/accounts/static/accounts/css/fonts.css
+++ b/accounts/static/accounts/css/fonts.css
@@ -1,15 +1,15 @@
 @font-face {
     font-family: "Montserrat";
     font-weight: 400;
-    src: url(../fonts/Montserrat-Regular.ttf);
+    src: url(/static/accounts/fonts/Montserrat-Regular.ttf);
 }
 @font-face {
     font-family: "Montserrat";
     font-weight: 500;
-    src: url(../fonts/Montserrat-Medium.ttf);
+    src: url(/static/accounts/fonts/Montserrat-Medium.ttf);
 }
 @font-face {
     font-family: "Montserrat";
     font-weight: 700;
-    src: url(../fonts/Montserrat-Bold.ttf);
+    src: url(/static/accounts/fonts/Montserrat-Bold.ttf);
 }
