--- a/accounts/static/accounts/css/reset.css
+++ b/accounts/static/accounts/css/reset.css
@@ -46,3 +46,13 @@ table {
 * {
 	box-sizing: border-box;
 }
+
+#id_address{
+	display: none;
+}
+#id_list_warehouse{
+	display: none;
+}
+#id_list_pick_up_point{
+	display: none;
+}
