--- a/accounts/static/accounts/css/registry.css
+++ b/accounts/static/accounts/css/registry.css
@@ -1,8 +1,9 @@
 body {
+    
     overflow-x: hidden;
 }
 .registry {
-    background: url('/static/accounts/img/Pattern.svg');
+    background: url(../images/Pattern.svg);
     background-color: var(--accent50);
     padding-top: 8rem;
     padding-bottom: 8rem;
@@ -52,7 +53,7 @@ body {
     margin-bottom: 1rem;
     color: var(--accent-color);
 }
-.registry__tab input {
+.form__field input {
     font-family: "Montserrat", sans-serif;
     font-size: 1.4rem;
     font-weight: 500;
@@ -65,7 +66,7 @@ body {
     height: 40px;
     width: 100%;
 }
-.registry__tab ::placeholder {
+.form__field ::placeholder {
     color: var(--accent-color);
 }
 .field_line {
