--- a/profile_user/templates/profile_user/profile.html
+++ b/profile_user/templates/profile_user/profile.html
@@ -1,37 +1,38 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/fonts.css">
-    <link rel="stylesheet" href="assets/css/header.css">
-    <link rel="stylesheet" href="assets/css/index.css">
-    <link rel="stylesheet" href="assets/css/profile.css">
-    <link rel="stylesheet" href="assets/css/registry.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="{% static '/accounts/css/reset.css' %}">
+    <link rel="stylesheet" href="{% static '/accounts/css/fonts.css' %}">
+    <link rel="stylesheet" href="{% static '/accounts/css/header.css' %}">
+    <link rel="stylesheet" href="{% static '/accounts/css/index.css' %}">
+    <link rel="stylesheet" href="{% static 'profile_user/css/profile.css' %}">
+    <link rel="stylesheet" href="{% static '/accounts/css/registry.css' %}">
+    <link rel="stylesheet" href="{% static '/accounts/css/main.css' %}">
+    <link rel="stylesheet" href="{% static '/accounts/css/footer.css' %}">
 
     <title>Hack2024</title>
 </head>
 <body>
     <div class="header">
         <div class="header-main container">
-            <a href="/index.html" class="header__logo">Kodopes</a>
+            <a href="{% url 'main' %}" class="header__logo">Kodopes</a>
             <div class="header-side">
                 <form class="header__search">
                     <input type="text" required placeholder="Поиск">
                     <button>
-                        <img src="assets/images/ui/search.svg" alt="Искать">
+                        <img src="{% static '/accounts/img/ui/search.svg' %}" alt="Искать">
                     </button>
                 </form>
                 <div class="header__nav">
-                    <a href="/registry.html" class="nav__account">
-                        <img src="assets/images/ui/user.svg" alt="Аккаунт">
+                    <a href="{% url 'signup' %}" class="nav__account">
+                        <img src="{% static '/accounts/img/ui/user.svg' %}" alt="Аккаунт">
                     </a>
                     <a href="#" class="nav__vk">
-                        <img src="assets/images/ui/vk.svg" alt="VK">
+                        <img src="{% static '/accounts/img/ui/vk.svg' %}" alt="VK">
                     </a>
                 </div>
             </div>
@@ -53,7 +54,7 @@
     <div class="profile_page profile_user _active">
         <div class="profile">
             <form class="profile-main container">
-                <label for="avatar_load" class="profile__avatar" data-imgurl="assets/images/avatar.jpg">
+                <label for="avatar_load" class="profile__avatar" data-imgurl="{% static '/accounts/img/avatar.jpg' %}">
                     
                 </label>
                 <input type="file" id="avatar_load">
@@ -127,7 +128,7 @@
     <div class="profile_page profile_customer">
         <div class="profile">
             <form class="profile-main container">
-                <label for="avatar_load" class="profile__avatar" data-imgurl="assets/images/avatar.jpg">
+                <label for="avatar_load" class="profile__avatar" data-imgurl="accounts/img/avatar.jpg">
                     
                 </label>
                 <input type="file" id="avatar_load">
@@ -196,7 +197,7 @@
         <div class="footer-main container">
             <h1 class="footer__title">Kodopes</h1>
             <div class="footer__nav">
-                <a href="/index.html">Главная</a>
+                <a href="{% url 'main' %}">Главная</a>
                 <a href="/index.html">О доставке</a>
                 <a href="/privacy-policy.html">Политика конфиденциальности</a>
                 <a href="/contacts.html">Контакты</a>
@@ -206,7 +207,7 @@
     </div>
 
     
-    <script src="assets/js/registry.js"></script>
-    <script src="assets/js/profile.js"></script>
+    <script src="{% static 'accounts/js/registry.js' %}"></script>
+    <script src="{% static 'profile_user/js/profile.js' %}"></script>
 </body>
 </html>
