Профиль почти допилен

--- a/accounts/static/accounts/css/reset.css
+++ b/accounts/static/accounts/css/reset.css
@@ -47,12 +47,12 @@ table {
 	box-sizing: border-box;
 }
 
-/* #id_address{
+#id_address{
 	display: none;
-} */
+}
 #id_list_warehouse{
 	display: none;
 }
 #id_list_pick_up_point{
 	display: none;
-}
+} 
